# language-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  botfather_texts.txt  pyproject.toml
tests/: helpers.py  test_config.py  test_config_more.py  test_i18n.py  test_srs.py  test_translate.py  test_translate_deepl.py
tests/handlers/: test_callbacks.py  test_commands.py  test_commands_access.py  test_common_utils.py  test_menu.py  test_messages.py  test_register_handlers.py  test_reviews_handler.py
tests/persistence/: fakes.py  test_cards_store.py  test_pending_store.py  test_users_store.py
tests/repositories/: test_cards.py  test_pending.py  test_users_repository.py
tests/services/: test_reviews.py  test_translation.py  test_users_service.py
vocab_bot/: __init__.py  __main__.py  config.py  db.py  handlers.py  i18n.py  repositories.py  services.py  srs.py  translate.py
vocab_bot/handlers/: __init__.py  callbacks.py  commands.py  common.py  menu.py  messages.py  reviews.py
vocab_bot/persistence/: __init__.py  cards.py  models.py  pending.py  types.py  users.py  utils.py
vocab_bot/repositories/: __init__.py  cards.py  pending.py  users.py
vocab_bot/services/: __init__.py  reviews.py  translation.py  users.py
