[project]
name = "language-assistant"
version = "0.1.0"
description = "Telegram bot for Polish–Russian vocabulary with spaced repetition"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot[job-queue]>=22.0,<23",
    "httpx>=0.27,<1",
    "sqlalchemy",
    "psycopg",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
vocab-bot = "vocab_bot.__main__:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vocab_bot"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
